basic search field complete

--- a/templates/rooms/room_list.html
+++ b/templates/rooms/room_list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block page_name %}home{% endblock %}
+{% block page_title %}home{% endblock %}
 
 {% block content %}
 
