--- a/templates/base.html
+++ b/templates/base.html
@@ -2,10 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{% block page_name %}{% endblock %} | Nbnb</title>
+    <title>{% block page_title %}{% endblock %} | Nbnb</title>
 </head>
 <body>
-{% include 'partials/header.html' %}
+<header>
+    {% include 'partials/nav.html' %}
+    {% block search-bar %}
+        <form method="get" action="{% url 'rooms:search' %}">
+            <input value="" name="city" placeholder="Search by City">
+        </form>
+    {% endblock %}
+</header>
+
 
 {% block content %}
 {% endblock %}
