--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -7,6 +7,7 @@
 
 {% block content %}
 
+    {% include 'partials/social_login.html' %}
     <form action="" method="post">
     {% csrf_token %}
     {{ form.as_p }}
