--- a/templates/base.html
+++ b/templates/base.html
@@ -1,17 +1,26 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <title>{% block page_title %}{% endblock %} | Nbnb</title>
 </head>
-<body>
-<header>
+<body class="text-gray-800">
+<header class="container max-w-full flex items-center justify-between px-6 h-20 border-b border-gray-400">
+    <div class="flex items-center">
+        <a href="{% url 'core:home' %}" class="mr-6">
+            <img class="w-8" src="{% static 'img/logo.png' %}">
+        </a>
+        {% block search-bar %}
+            <form method="get" action="{% url 'rooms:search' %}">
+                <input class="border px-2 py-1 rounded-sm" value="" name="city" placeholder="Search by City">
+            </form>
+        {% endblock %}
+    </div>
     {% include 'partials/nav.html' %}
-    {% block search-bar %}
-        <form method="get" action="{% url 'rooms:search' %}">
-            <input value="" name="city" placeholder="Search by City">
-        </form>
-    {% endblock %}
 </header>
 
 
