--- a/templates/base.html
+++ b/templates/base.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <script src="https://kit.fontawesome.com/f33c227649.js" crossorigin="anonymous"></script>
     <title>{% block page_title %}{% endblock %} | Nbnb</title>
 </head>
-<body class="text-gray-800 mt-24">
+<body class="text-gray-800 mt-24 font-light">
 <header class="container inset-0 max-w-full flex items-center justify-between px-6 h-20 border-b border-gray-400 fixed bg-white">
     <div class="flex items-center w-1/3">
         <a href="{% url 'core:home' %}" class="mr-6">
@@ -16,7 +17,8 @@
         </a>
         {% block search-bar %}
             <form method="get" action="{% url 'rooms:search' %}" class="w-9/12">
-                <input class="search-box border w-full px-5 font-medium text-gray-900 placeholder-gray-600 py-3 rounded-sm w-64 shadow-md hover:shadow-lg focus:outline-none" value="" name="city" placeholder="Search by City">
+                <input class="search-box border w-full px-5 font-medium text-gray-900 placeholder-gray-600 py-3 rounded-sm w-64 shadow-md hover:shadow-lg focus:outline-none"
+                       value="" name="city" placeholder="Search by City">
             </form>
         {% endblock %}
     </div>
