--- a/templates/rooms/room_list.html
+++ b/templates/rooms/room_list.html
@@ -1,25 +1,33 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block page_title %}home{% endblock %}
 
 {% block content %}
 
-    {{ now }}
+    <div class="container mx-auto pb-10">
 
-    {% for room in rooms %}
-        <h3>
-            <a href="{% url 'rooms:detail' room.pk %}">{{ room.name }} / ${{ room.price }}</a>
-        </h3>
-    {% endfor %}
+        <div class="container rounded-2xl mx-auto bg-gray-800 w-full h-50vh mt-32 mb-20 bg-cover bg-center"
+             style="background-image: url({% static 'img/bg.jpeg' %})">
+        </div>
 
-    <h5>
-        {% if page_obj.has_previous %}
-            <a href="?page={{ page_obj.previous_page_number }}">Previous</a>
-        {% endif %}
-        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
-        {% if page_obj.has_next %}
-            <a href="?page={{ page_obj.next_page_number }}">Next</a>
-        {% endif %}
-    </h5>
+        <div class="flex flex-wrap mb-10">
+            {% for room in rooms %}
+                {% include 'partials/room_card.html' with room=room %}
+            {% endfor %}
+        </div>
+
+        <div class="flex items-center justify-center mx-auto container">
+            {% if page_obj.has_previous %}
+                <a href="?page={{ page_obj.previous_page_number }}" class="text-blue-400"><i class="fas fa-arrow-left fa-lg"></i></a>
+            {% endif %}
+            <span class="mx-3 font-medium text-lg">{{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</span>
+            {% if page_obj.has_next %}
+                <a href="?page={{ page_obj.next_page_number }}" class="text-blue-400"><i class="fas fa-arrow-right fa-lg"></i></a>
+            {% endif %}
+        </div>
+
+    </div>
+
 
 {% endblock %}
