--- a/templates/partials/social_login.html
+++ b/templates/partials/social_login.html
@@ -1,8 +1,16 @@
-<div>
-    <a href="{% url 'users:github_login' %}">
-        Continue with Github
+<div class="flex flex-col w-full">
+    <a href="{% url 'users:github_login' %}"
+       class="btn w-full text-lg font-medium text-gray-700 mb-2 border border-gray-700 text-center rounded-sm py-5">
+        <i class="fab fa-github-alt ml-2 fa-lg"></i> Continue with Github
     </a>
-    <a href="{% url 'users:kakao_login' %}">
-        Continue with Kakao
+    <a href="{% url 'users:kakao_login' %}"
+       class="btn w-full text-lg font-medium text-yellow-800 mb-2 border border-yellow-400 bg-yellow-400 text-center rounded-sm py-5">
+        <i class="fas fa-comment ml-2 fa-lg"></i> Continue with Kakao
     </a>
+</div>
+
+<div class="flex items-center w-full my-4">
+    <div class="h-px w-full bg-gray-400"></div>
+    <span class="text-gray-600 font-medium mx-4 text-sm">or</span>
+    <div class="h-px w-full bg-gray-400"></div>
 </div>
