--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -7,11 +7,20 @@
 
 {% block content %}
 
-    {% include 'partials/social_login.html' %}
-    <form action="" method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button>Login</button>
-    </form>
+    <div class="container xl:1/4 lg:w-1/4 md:w-1/2 mx-auto my-10 flex flex-col items-center border p-6 border-gray-400">
+        {% include 'partials/social_login.html' %}
+
+        <form action="" method="post" class="w-full">
+            {% csrf_token %}
+            <input type="email" placeholder="Email" class="mb-2">
+            <input type="password" placeholder="Password" class="mb-2">
+            <button class="btn bg-red-500 text-white">Login</button>
+        </form>
+
+        <div class="mt-5">
+            <span class="mr-2">Don't have an account?</span>
+            <a href="{% url 'users:signup' %}" class="text-teal-500 font-medium">Sign Up</a>
+        </div>
+    </div>
 
 {% endblock %}
