--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -20,4 +20,15 @@ input {
   @apply rounded-sm py-5 font-light text-lg w-full text-left border border-gray-400 px-5 focus:outline-none focus:border-blue-500;
 }
 
+form {
+  .input {
+    @apply mb-2;
+    &.has_error {
+      input {
+        @apply bg-red-200 border-gray-400 focus:border-gray-600;
+      }
+    }
+  }
+}
+
 @tailwind utilities;
