--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
     <title>{% block page_title %}{% endblock %} | Nbnb</title>
 </head>
 <body class="text-gray-800 mt-24 font-light">
+{% include 'partials/messages.html' %}
 <header class="container inset-0 max-w-full flex items-center justify-between px-6 h-20 border-b border-gray-400 fixed bg-white">
     <div class="flex items-center w-1/3">
         <a href="{% url 'core:home' %}" class="mr-6">
@@ -25,9 +26,9 @@
     {% include 'partials/nav.html' %}
 </header>
 
-
 {% block content %}
 {% endblock %}
+
 
 {% include 'partials/footer.html' %}
 </body>
