--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -21,7 +21,20 @@
 }
 
 input {
-  @apply rounded-sm py-5 font-light text-lg w-full text-left border border-gray-400 px-5 focus:outline-none focus:border-blue-500;
+  @apply rounded-sm py-5 font-light text-lg w-full text-left border border-gray-400 px-5 focus:outline-none focus:border-teal-500;
+}
+
+input, textarea, select {
+  @apply rounded-sm py-5 font-light text-lg w-full text-left border border-gray-600 px-5 focus:outline-none focus:border-teal-500;
+}
+
+textarea {
+  resize: none;
+  height: 100px;
+}
+
+select {
+  @apply rounded-sm font-light text-lg w-full text-left border border-gray-600 px-5 focus:outline-none focus:border-teal-500;
 }
 
 form {
