--- a/templates/mixins/auth/auth_form.html
+++ b/templates/mixins/auth/auth_form.html
@@ -1,4 +1,4 @@
-<form action="" method="post" class="w-full">
+<form action="" method="post" class="w-full" enctype="multipart/form-data">
     {% csrf_token %}
 
     {% if form.non_field_errors %}
